--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -52,5 +52,23 @@
     line-height: 20px;
 }
 
+.filter_button{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 280px;
+    padding-left: 15px;
+    padding-bottom: 2px;
+
+    border: none;
+    border-bottom: solid 2px var(--color-white-fixed);
+    
+
+    background-color: transparent;
+    color: var(--color-white-fixed);
+
+    font-size: var(--font-size-4);
+    font-weight: 800;
+    line-height: 24px;
+}
 
 
