--- a/styles/containers.css
+++ b/styles/containers.css
@@ -6,6 +6,15 @@
     border: solid 1px rgba(0, 0, 0, 0.2); 
 }
 
+.filter-container{
+    background-color: var(--color-purple-100);
+    display: none;
+
+    top: 19.5%;
+    width: 90%;
+}
+
+
 .buttons-header{
     margin: 30px 25px 0px 0px;
 }
