--- a/pages/register/index.css
+++ b/pages/register/index.css
@@ -63,3 +63,30 @@
     height: 50px;
 }
 
+@media(min-width: 700px) {
+    .dropdown_img{
+        display: none;
+    }
+    .main-container{
+        width: 100%;
+        background-position: center top;
+        background-image: url(../../img/Rectangle\ 8.png);
+    }
+    .register-container{
+        margin-left: 40%;
+
+        width:  500px;
+        height: 550px;
+    }
+    select{
+        display: flex;
+        justify-content: space-around;
+        justify-content: center;
+        background-color: transparent;
+    
+        background-image: url(../../img/Vector\ -\ default.png);
+
+        color: var(--color-grey-300);
+        font-size: var(--font-size-4);
+    }
+}
