--- a/styles/displays.css
+++ b/styles/displays.css
@@ -10,6 +10,10 @@
     justify-content: space-between;
 }
 
+.j-center{
+    justify-content: center;
+}
+
 .s-around{
     justify-content: space-around;
 }
